<resources>
    <string name="app_name">Popular Movies Stage 1</string>
    <string name="movie_poster_image">Movie Poster</string>
    <string name="api_key">90a613208764201fa65896135cd1ef6d</string>
    <string name="example_original_title">The Green Poster Man</string>
    <string name="example_release_date">08–31–2015</string>
    <string name="example_vote_average">8.2/10</string>
    <string name="example_overview">abcdefghijklmnopqrstuvwxyz</string>
    <string name="heading_movie_date">Date</string>
    <string name="heading_movie_rating">Rating</string>
    <string name="top_rated_menu_title">Top Rated</string>
    <string name="most_popular_menu_title">Most Popular</string>

</resources>
