<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.MovieDetailsActivity">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="6"
   >


    <ImageView
        android:id="@+id/imageview_poster"
        android:layout_width="match_parent"
        android:layout_height="278dp"
        android:layout_weight="4"
        android:scaleType="fitXY"
        android:src="@drawable/movie_poster"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        >

    <TextView
        android:id="@+id/textview_original_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:text="@string/example_original_title"
        android:textSize="@dimen/abc_text_size_headline_material" />
    <TextView
        android:id="@+id/textview_release_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading_movie_date"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <TextView
        android:id="@+id/textview_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="2dp"
        android:text="@string/example_release_date"
        android:textSize="@dimen/abc_text_size_large_material" />

    <TextView
        android:id="@+id/textview_vote_average_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/heading_movie_rating"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <TextView
        android:id="@+id/textview_vote_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/example_vote_average"
        android:textSize="@dimen/abc_text_size_large_material" />

        <TextView
            android:id="@+id/textview_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/example_overview" />
    </LinearLayout>



</LinearLayout>
</ScrollView>
